[tool.poetry]
name = "sparse_dot_topn_for_blocks"
version = "0.3.1-4"
description = "This package is intended for matrix blocks, boosting a sparse matrix multiplication followed by selecting the top-n multiplication"
authors = ["GuillaumePressiat <guillaume.pressiat@chu-brest.fr>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# Setuptools 18.0 properly handles Cython extensions.
setuptools = "^42"
cython = "^0.29.15"
numpy = "^1.16.6" # select this version for Py2/3 compatible
scipy = "^1.2.3"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"